fixed button contrast

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -136,6 +136,7 @@ body {
 .upgrade-item {
   text-align: center;
   background: #00699E;
+  color: white;
   padding: 10px;
   border-radius: 5px;
   display: flex;
